# cpp.jspath

./: .gitignore  .tags  .tags1  CMakeLists.txt  README.md
cmake/: CollectSrcs.cmake
include/: Context.h  DotLocationPath.h  Enum.h  Expression.h  Filter.h  IndexRange.h  JSPath.h  JSQuery.h  LocationPath.c  LocationPath.h  MultiLocationPath.h  Positional.h
include/compiler/: JSPathCompiler.h  PredicateParser.h  Utils.h
include/location/: 2DotLocationPath.h  DotLocationPath.h  MultiLocationPath.h  RegexLocationPath.h  RootLocationPath.h  WildcardLocationPath.h
include/positional/: IndexRange.h  Positional.h
include/predicate/: ArthemeticOperator.h  ArthemeticOperator.h.autosave  BinaryOperator.hpp  Comparator.h  LogicOperator.h  Operand.h  Predicate.h  StringOperator.h
lib/: .RegexLocationPath.cpp.swp  2DotLocationPath.cpp  CMakeLists.txt  Context.cpp  DotLocationPath.cpp  Expression.cpp  Filter.cpp  IndexRange.cpp  JSPath.cpp  JSQuery.cpp  LocationPath.cpp  MultiLocationPath.cpp  Positional.cpp  Predicate.cpp  RegexLocationPath.cpp  WildcardLocationPath.cpp
lib/compiler/: CMakeLists.txt  JSPathCompiler.cpp  PredicateParser.cpp  Utils.cpp
lib/location/: 2DotLocationPath.cpp  CMakeLists.txt  DotLocationPath.cpp  MultiLocationPath.cpp  RegexLocationPath.cpp  RootLocationPath.cpp  WildcardLocationPath.cpp
lib/positional/: CMakeLists.txt  IndexRange.cpp  Positional.cpp
lib/predicate/: ArthemeticOperator.cpp  CMakeLists.txt  Comparator.cpp  LogicOperator.cpp  Operand.cpp  Predicate.cpp  StringOperator.cpp
src/: CMakeLists.txt  main.cpp
tests/: DFC.automaton  array.json  automobiles.json  book.json  book1.json  book2.json
