cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type")


SET(TARGET jspath)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(win32)
    ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
ENDIF()

SET(${TARGET}_SUBDIRS ioServiceManager crypto plugin utils timePublisher timeTrigger)
Add_Subs(${TARGET}_SUBDIRS)

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_LIBRARY(${TARGET} ${${TARGET}_SRCLISTS})
TARGET_LINK_LIBRARIES(${TARGET} tbbmalloc)
set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
#set_target_properties(${TARGET} PROPERTIES COTIRE_PREFIX_HEADER_IGNORE_PATH "boost/preprocessor")
#cotire(${TARGET})
TARGET_LINK_LIBRARIES(${TARGET} thrift)
TARGET_LINK_LIBRARIES(${TARGET} log4cplus)
TARGET_LINK_LIBRARIES(${TARGET} tbb)
TARGET_LINK_LIBRARIES(${TARGET} boost_thread)
TARGET_LINK_LIBRARIES(${TARGET} boost_filesystem)
TARGET_LINK_LIBRARIES(${TARGET} boost_system)
TARGET_LINK_LIBRARIES(${TARGET} boost_date_time)
TARGET_LINK_LIBRARIES(${TARGET} boost_chrono)
TARGET_LINK_LIBRARIES(${TARGET} crypto)
TARGET_LINK_LIBRARIES(${TARGET} tcmalloc)
if(win32)
    LINK_DIRECTORIES(C:\Windows\System32)
    TARGET_LINK_LIBRARIES(${TARGET} gdi32 user32 ws2_32)
endif()

INSTALL(TARGETS ${TARGET}
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)

