cmake_minimum_required(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(BUILD_SHARED_LIBS ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Werror=uninitialized -Werror=return-type")


SET(TARGET jspath)
PROJECT(${TARGET})
INCLUDE(CollectSrcs)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF(win32)
    ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB BOOST_ASIO_DISABLE_STD_ATOMIC)
ENDIF()

SET(${TARGET}_SUBDIRS )
Add_Subs(${TARGET}_SUBDIRS)

GET_SRCS(${TARGET}_SRCLISTS ${TARGET}_SUBDIRS)
ADD_EXECUTABLE(${TARGET} ${${TARGET}_SRCLISTS})
set_target_properties(${TARGET} PROPERTIES VERSION $ENV{BUILD_VERSION} SOVERSION $ENV{BUILD_VERSION})
TARGET_LINK_LIBRARIES(${TARGET} cpp.jspath)
TARGET_LINK_LIBRARIES(${TARGET} boost_program_options)

INSTALL(TARGETS ${TARGET} RUNTIME DESTINATION bin)

